infra/plex/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-plex-media-server-ingress
  namespace: plex
  labels:
    app: plex-media-server
    app.kubernetes.io/instance: plex
    app.kubernetes.io/name: plex-media-server
    app.kubernetes.io/version: 1.16.0
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex-plex-media-server
                port:
                  number: 32400
